# Basic-NLP---RNN

./: README.md
rnn/: .gitignore  pyproject.toml
rnn/rnn/config/: config.py
rnn/rnn/data/: dataloader.py  dataset.py
rnn/rnn/generate/: generate.py
rnn/rnn/models/: RNN.py
rnn/rnn/notebooks/: rnn.ipynb  rnn_1_epoch.ipynb  rnn_25_epochs.ipynb  rnn_ms.ipynb
rnn/rnn/tests/: test_rnn.py
rnn/rnn/train/: train.py
